<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent" android:padding="10dip">
	<TableRow android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<ImageView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:src="@drawable/flag_green"
			android:layout_marginRight="5dip" />
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/Legend_Alert_Serie_suivie" />
	</TableRow>
	<TableRow android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<ImageView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:src="@drawable/flag_blue"
			android:layout_marginRight="5dip" />
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/Legend_Alert_Serie_complete" />
	</TableRow>
	<TableRow android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<ImageView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:src="@drawable/flag_red"
			android:layout_marginRight="5dip" />
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/Legend_Alert_Serie_non_suivie" />
	</TableRow>
	<TableRow android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<ImageView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:src="@drawable/flag_orange"
			android:layout_marginRight="5dip" />
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/Legend_Alert_Serie_interrompue" />
	</TableRow>
</TableLayout>
