<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:background="@color/bgColor"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:padding="10dip">
	<ImageView android:src="@drawable/logo_ms"
		android:layout_marginBottom="10dip" android:layout_width="match_parent"
		android:layout_height="wrap_content" />
	<TableLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:stretchColumns="2">
		<TableRow android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/UserDetails_Username" android:textColor="@color/black"/>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text=":" android:textColor="@color/black" android:paddingRight="10dip" />
			<EditText android:id="@+id/ms_username"
				android:layout_width="match_parent" android:layout_height="wrap_content" />
		</TableRow>
		<TableRow android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/UserDetails_Password" android:textColor="@color/black" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text=":" android:textColor="@color/black" android:paddingRight="10dip" />
			<EditText android:id="@+id/ms_password" android:password="true"
				android:layout_width="match_parent" android:layout_height="wrap_content" />
		</TableRow>
	</TableLayout>
	<Button android:id="@+id/ms_login" android:text="@string/UserDetails_Login"
		android:layout_height="wrap_content" android:layout_width="wrap_content"
		android:layout_gravity="center" />
</LinearLayout>
